--- a/index.css
+++ b/index.css
@@ -86,6 +86,16 @@ img.right {
 
 /* Menu: Parents ================================================ */
 
+.menu-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background: linear-gradient(0deg, rgba(25, 185, 229, 0) 0%, rgba(25, 185, 229, 1) 50%, rgba(25, 185, 229, 1) 100%);
+  z-index: 8;
+}
+
 .menu-top-left {
   position: fixed;
   top: 10px;
