--- a/schedule/schedule_s.css
+++ b/schedule/schedule_s.css
@@ -39,15 +39,14 @@ ul > li b i {
 /* Day: Specific ================================================ */
 
 /* Final Package */
-#fc-dom-210 {
+/* #fc-dom-210 {
   position: absolute;
   width: 100%;
   height: 100%;
-  /* text-align: right; */
   color: black;
   background: var(--p4-bg);
   z-index: -1;
-}
+} */
 
 
 /* No Class */
