--- a/arena/class.css
+++ b/arena/class.css
@@ -239,11 +239,14 @@ hr {
 }
 
 .BlockInner__Media {
-  position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* position: relative;
   width: 100%;
   overflow: hidden;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio */
-  background: #000000;
+  padding-top: 56.25%;
+  background: #000000; */
 }
 
 
