--- a/schedule_m/monthly_font.css
+++ b/schedule_m/monthly_font.css
@@ -32,7 +32,7 @@
   --p2-text: black;
   --p2-bg: rgb(0, 255, 0);
   --p3-text: black;
-  --p3-bg: #00eeff;
+  --p3-bg: #d3bfff;
   --p4-text: black;
   --p4-bg: white;
   --pn-text: #19b9e5;
