--- a/schedule_w/weekly_font.css
+++ b/schedule_w/weekly_font.css
@@ -159,7 +159,8 @@ span.p2 {
 
 span.p3 {
   color: black;
-  background: #00eeff;  
+  background: #d3bfff;
+  /* background: #00eeff;   */
   /* color: white;
   background: blue; */
 }
